2008-06-08  Andreas Schwab  <schwab@suse.de>

	* minibuffer.el (minibuffer-message): Bind inhibit-quit around
	sit-for.

2008-06-08  Martin Rudalics  <rudalics@gmx.at>

	* window.el (split-height-threshold, split-width-threshold): Add
	choice nil.
	(split-window-preferred-function): Allow either nil or a function.
	(window--splittable-p, window--try-to-split-window): Handle
	changed option values.

	(window--frame-usable-p): Handle nil argument.

	(display-buffer): Call get-lru-window when pop-up-windows is nil
	and window can't be split.

2008-06-08  Michael Albinus  <michael.albinus@gmx.de>

	* uniquify.el (uniquify-get-proposed-name): Handle remote files.

	* net/tramp.el (top): Quote feature names.  Remove
	`tramp-rfn-eshadow-setup-minibuffer' from
	`rfn-eshadow-setup-minibuffer-hook' when unloading.
	(tramp-read-passwd): There is only one call to
	`auth-source-user-or-password' needed.  Pacify byte compiler.

2008-06-08  Andreas Schwab  <schwab@suse.de>

	* window.el (display-buffer): Use lru window if current window
	cannot be split.

2008-06-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* apropos.el (apropos-library): New command and new button.
	(apropos-library-button): New function.

	* apropos.el: Remove spurious * in docstrings.
	(apropos-label-face): Use variable pitch.
	(apropos-print): Use dolist and with-current-buffer.
	(apropos-print-doc): Use when.

	* window.el (special-display-p, display-buffer):
	Fix up C->Elisp transcription error.

2008-06-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/bytecomp.el (byte-compile-current-group): New var.
	(byte-compile-file): Initialize it.
	(byte-compile-nogroup-warn): Keep track of the current group.

2008-06-08  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (compile, compile-always, bootstrap-prepare):
	Explictly pass EMACS to sub-makes that use it, for non-GNU makes.

2008-06-07  Jihyun Cho  <jihyun.jo@gmail.com>

	* language/hanja-util.el (hanja-init-load): Use a char-table for